--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -299,6 +299,17 @@ header {
     border: 5px solid rgba(155, 89, 182, 0.9);
 }
 
+.avatar2 {
+    height: 50px;
+    width: auto;
+    float: left;
+    border-radius: 50%;
+    margin-top: 8px;
+    margin-bottom: 5px;
+    display: none;
+    border: 3px solid rgba(155, 89, 182, 0.9);
+}
+
 /* Main navi */
 .main-nav {
     float: right;
@@ -330,6 +341,41 @@ header {
     border-bottom: 2px solid #f1c40f;
     
 }
+
+/* sticky nav */
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.97);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 99999;
+    
+}
+.sticky .main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 20px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited{
+
+    color: #555;
+    padding: 20px 0;
+
+    
+}
+
+.sticky .avatar {
+    display: none;
+}
+
+.sticky .avatar2 {
+    display: block;
+}
+
 
 /* ----------------------------------------------- */
 /* SECTION-FEATURES */
